--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <a href="https://github.com/Jon-ram">jon-ram</a>
         </p>
     </header>
+
+    <script src="/js/Ejercicios_01.js"></script>
     
 </body>
 </html>
