--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https//fonts.googleapis.com">
     <link rel="preconnect" href="https//fonts.gstatic.com" crossorigin>
     <link href="https//fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet" >
+    <link rel="stylesheet" href="/CSS/App.css">
 </head>
 <body>
     
     <header>
         <h1>Fundamentos de JavaSccript</h1>
-        <h2><strong>Asignatura:</strong> Aplicaciones Web Orientadas a Servicios</h2>
-        <h2><strong>Docente:</strong>M.T.I Marco A. Ramirez Hernadez</h2>
+        <p><strong>Asignatura:</strong> Aplicaciones Web Orientadas a Servicios</p>
+        <p><strong>Docente:</strong>M.T.I Marco A. Ramirez Hernadez</p>
         <br>
         <p>
             Elaborado por: <strong>&lt; Jonathan Baldemar Ramirez Reyes &lt;</strong>
@@ -22,7 +23,7 @@
         </p>
     </header>
 
-    <script src="/js/Ejercicios_01.js"></script>
+    <script src="/js/Ejercicio_02.js"></script>
     
 </body>
 </html>
